# customer-churn-project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  GIT_ISSUES_FIXED.md  Makefile  PROJECT_STRUCTURE.md  README.md  azure-pipelines.yml  coverage.json  customer_churn_cubs.ipynb  deployment.md  local-dev.md  local_backfill.py  power-bi.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  score_chunks.py  score_customers.py  scoring.md  secrets.md  split-csv.ipynb  split_csv.py  sql.md  testing.md
dax/: churn_features.dax
docs/: APPLICATION_INSIGHTS_ALERTS.md  CI_CD_SETUP.md  COST_MONITORING.md  DEPLOYMENT.md  GIT_REMOTES_SETUP.md  SERVICE_PRINCIPAL_SETUP.md  STREAMLIT_DASHBOARD_ASSESSMENT.md  code-review.md  comprehensive-report.md  test-suite-report.md
function_app/: __init__.py  blob_client.py  config.py  csv_validator.py  dax_client.py  email_client.py  function.json  function_app.py  pbi_client.py  requirements.txt  scorer.py  sql_client.py
model/: conda.yml  score.py
outputs/: README.md  code-review.md  dax_client-code-review.md  requirements-review.md  test-coverage-report.md  test-suite-report.md
queries/: churn_features_dax_multimonth.dax
scripts/: README_LINTING.md  README_MARKDOWN_SCRIPTS.md  README_PYTHON_SCRIPTS.md  add_sp_to_dataset.py  check_app_permissions.py  check_tenant_settings.py  clean-git-history.sh  deploy_sql_schema.py  diagnose_executequeries_401.py  fix-all-lint.sh  fix-all-markdown.sh  fix-markdown-lint.py  fix-python-lint.py  generate_code_review_report.py  generate_comprehensive_report.py  (+13 more)
(+24 files in other folders)
